Mist pass not compatible with SSS #91279

Closed
opened 2021-09-09 12:36:50 +02:00 by Peter Baintner · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-09-07 18:40, hash: 7bbe12b64f
Worked: 2.93

Short description of error
If a material has subsurface scattering the mist pass returns always a value of 0.
with sss
with_sss.jpg
without sss
without_sss.jpg

Exact steps for others to reproduce the error
Add an object with sss and enable the mist pass.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-09-07 18:40, hash: `7bbe12b64f` Worked: 2.93 **Short description of error** If a material has subsurface scattering the mist pass returns always a value of 0. with sss ![with_sss.jpg](https://archive.blender.org/developer/F10390517/with_sss.jpg) without sss ![without_sss.jpg](https://archive.blender.org/developer/F10390521/without_sss.jpg) **Exact steps for others to reproduce the error** Add an object with sss and enable the mist pass.
Author

Added subscriber: @PeterBaintner

Added subscriber: @PeterBaintner
Peter Baintner changed title from [Cycles X] Mist pass not compatible with SSS to Mist pass not compatible with SSS 2021-09-09 12:43:51 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'

Thanks for the report Peter!

Confirmed, moving it to the Cycles X bug list and closing it. (We can only accept bug reports for master and releases officially).

Thanks for the report Peter! Confirmed, moving it to the Cycles X bug list and closing it. (We can only accept bug reports for master and releases officially).

This issue was referenced by 541ff54793f50474559ac7a33d2c6d91ef5cc6e7

This issue was referenced by 541ff54793f50474559ac7a33d2c6d91ef5cc6e7

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Added subscriber: @a_petrukovich

Added subscriber: @a_petrukovich

This bug is still present in the release (3.0) version.
screenshot

This bug is still present in the release (3.0) version. [screenshot ](https://gyazo.com/9d251467fa8dcf727593bdc90f6e5f85)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91279
No description provided.