Fix T91279: incorrect mist and other passes with subsurface scattering